syntax = "proto3";
// 第一行说明语法版本

package greet;


option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

message GreetWithDeadlineRequest {
    Greeting greeting = 1;
}

message GreetWithDeadlineResponse {
    string result = 1;
}

// 服务名
service GreetService {
    // Unary
    // 接口声明, 类似http 的一来一回短消息
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // server stream    client端短连接 server端长连接
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // client stream    server端短连接 client端长连接
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    // Bidirectional streaming      client,server全部长连接
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

    // Rpc with Deadline
    // this Rpc will complete in no less than 300ms
    rpc GreetWithDeadline(GreetWithDeadlineRequest) returns (GreetWithDeadlineResponse) {};
}